[package]
name = "bashkit-js-random-fs-fixture"
version = "0.1.0"
edition = "2024"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
bashkit = { path = "../../../bashkit", features = ["interop"] }
napi = { version = "3.0.0", default-features = false, features = ["napi6", "compat-mode"] }
napi-derive = "3.0.0"

[build-dependencies]
napi-build = "2.3.1"
